--- a/index.html
+++ b/index.html
@@ -10,24 +10,13 @@
 
   <title>Frontend Mentor | 3-column preview card component</title>
   <link rel="stylesheet" href="style.css">
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution {
-      font-size: 11px;
-      text-align: center;
-    }
-
-    .attribution a {
-      color: hsl(228, 45%, 44%);
-    }
-  </style>
 </head>
 
 <body>
 
   <div id="main">
     <div class="sedans-box box">
-      <div><img src="./images/icon-sedans.svg"></div>
+      <div><img src="./images/icon-sedans.svg" alt="Icon sedans"></div>
       <h2>Sedans</h2>
       <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city
         or on your next road trip.</p>
@@ -35,7 +24,7 @@
     </div>
 
     <div class="suvs-box box">
-      <div><img src="./images/icon-suvs.svg"></div>
+      <div><img src="./images/icon-suvs.svg" alt="Icon suvs"></div>
       <h2>SUVs</h2>
       <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation
         and off-road adventures.</p>
@@ -43,7 +32,7 @@
     </div>
 
     <div class="luxury-box box">
-      <div><img src="./images/icon-luxury.svg"></div>
+      <div><img src="./images/icon-luxury.svg" alt="Icon luxury"></div>
       <h2>Luxury</h2>
       <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury
         rental and arrive in style.</p>
@@ -51,10 +40,10 @@
     </div>
   </div>
 
-  <!-- <div class="attribution">
+  <div class="attribution hidden">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
-  </div> -->
+    Coded by <a href="#">Corfaya</a>.
+  </div>
 </body>
 
 </html>
